# lock-mechanism

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
electronics/: .gitignore  mechanism-pcb.pdsprj
electronics/caja/: caja.SLDPRT  caja_base.STL  caja_tapa.STL  cuerpo_caja.SLDPRT  cuerpo_caja.STL  tapa_caja.SLDPRT  tapa_caja.STL
electronics/connections/: pcb_to_ck1.bom.tsv  pcb_to_ck1.yml
main/: CMakeLists.txt  main.c  main.h
main/gpio_utils/: gpio_utils.c  gpio_utils.h
main/logging_utils/: logging_utils.c  logging_utils.h
main/servo_utils/: servo_utils.c  servo_utils.h
main/twai_utils/: twai_utils.c  twai_utils.h
