idf_component_register(SRCS 
                        main.c
                        twai_utils/twai_utils.c
                        servo_utils/servo_utils.c
                        gpio_utils/gpio_utils.c
                        logging_utils/logging_utils.c
                        INCLUDE_DIRS "."
)